数据列表组件完成

--- a/assets/css/module/pagelist.css
+++ b/assets/css/module/pagelist.css
@@ -20,3 +20,84 @@
     line-height: 40px;
     text-align: center;
 }
+.xs-container {
+    width: 100%;
+    height: 100%;
+}
+#B_Scroll{
+    width: 100%;
+    position: absolute;
+    right: 0;
+    top:10rem;
+    bottom: 0;
+    overflow: hidden;
+}
+#B_Scroll .xs-container{
+    top:0;
+}
+#B_Scroll .xs-content{
+    width: 100%;
+}
+#B_Scroll li{
+    border:1px solid #ccc;
+    /*display: none;*/
+    height:70;
+    line-height:70px;
+    width:100%;
+    white-space: nowrap;
+    text-decoration: none;
+    color:#666;
+    text-align: center;
+}
+#B_Scroll .content-title{
+    height:50;
+    display: none;
+    line-height:50px;
+    text-align: center;
+    width:100%;
+    white-space: nowrap;
+    text-decoration: none;
+    color:#fff;
+    background:#5bc0de;
+}
+#B_Scroll .btn{
+    width: 100%;
+}
+.lbl-ctn{
+    width: 100%;
+    position: absolute;
+    -webkit-transform:translateX(0) translateZ(0);
+    background: #fff;
+    z-index: 1;
+}
+
+.lbl{
+    width: 100%;
+    display: inline-block;
+    vertical-align: top;
+    text-align: center;
+    position: absolute;
+    background: #fff;
+    z-index: 1;
+    left: 0;
+}
+.control{
+    position:absolute;
+    white-space: nowrap;
+    width: 40%;
+    z-index:0;
+    right:0;
+}
+.btn{
+    display: inline-block;
+    color:#fff;width:50%;text-align:center;
+}
+.btn-delete{
+    background:red;
+}
+.btn-mark{
+    background: #ccc;
+}
+.btn-marked{
+    background: green;
+}
